--- a/Moon/app/src/main/res/layout/activity_login.xml
+++ b/Moon/app/src/main/res/layout/activity_login.xml
@@ -1,9 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".Login.Login">
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="280dp"
+        android:layout_height="100dp"
+        android:layout_gravity="center">
 
-</android.support.constraint.ConstraintLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="280dp"
+        android:layout_height="300dp"
+        android:layout_gravity="center_horizontal"
+        >
+        <LinearLayout
+            android:layout_gravity="center_horizontal"
+            android:orientation="horizontal"
+            android:layout_width="275dp"
+            android:layout_height="60dp">
+
+            <EditText
+                android:id="@+id/editID"
+                android:hint="Email"
+                android:layout_width="150dp"
+                android:layout_height="50dp" />
+
+            <TextView
+                android:text="\@bist.com"
+                android:textSize="18dp"
+                android:layout_width="120dp"
+                android:layout_height="50dp" />
+
+        </LinearLayout>
+        <EditText
+            android:id="@+id/editPW"
+            android:hint="Password"
+            android:layout_width="270dp"
+            android:layout_height="50dp"
+            android:imeActionId="6"
+            android:imeActionLabel="@string/action_sign_in_short"
+            android:imeOptions="actionUnspecified"
+            android:inputType="textPassword"
+            android:maxLines="1"
+            android:singleLine="true"/>
+
+        <Button
+            android:text="로그인"
+            android:id="@+id/btnLogin"
+            android:layout_gravity="center"
+            android:layout_width="260dp"
+            android:layout_height="50dp" />
+        <Button
+            android:text="회원가입"
+            android:id="@+id/btnReg"
+            android:layout_gravity="center"
+            android:layout_width="260dp"
+            android:layout_height="50dp" />
+    </LinearLayout>
+
+</LinearLayout>
